Prevent background image from stretching

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   opacity: 0;
   z-index: -2;
 }
